Feature/new configurable filter (#2296)
* feat(common): new configurable filter

* feat: style optimization

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -675,6 +675,7 @@
     "change setting": "change setting",
     "changes in the day": "changes in the day",
     "changes in the hour": "changes in the hour",
+    "clear": "clear",
     "clear selected": "clear selected",
     "click edit to complete the form": "click edit to complete the form",
     "click to add item": "click to add item",
@@ -712,6 +713,7 @@
     "expand branch directory selection document": "expand branch directory selection document",
     "expand branch directory selection document or create a new document": "expand branch directory selection document or create a new document",
     "file upload": "file upload",
+    "filter": "filter",
     "folder": "folder",
     "form": "form",
     "form configuration": "form configuration",
@@ -1034,6 +1036,7 @@
     "change execution result": "change execution result",
     "change executor": "change executor",
     "change label": "change label",
+    "changed": "changed",
     "changed file(s)": "changed file(s)",
     "changed files": "changed files",
     "checkrun-failure-tip": "the code review in MR failed. Please check the pipeline for details",
@@ -1132,6 +1135,7 @@
     "custom addon config": "custom addon config",
     "custom config of issue type": "custom config of issue type",
     "custom fields": "custom fields",
+    "custom filter": "custom filter",
     "cut": "cut",
     "dashboard": "dashboard",
     "data bank": "data bank",
@@ -1261,6 +1265,8 @@
     "filter by data source name": "filter by data source name",
     "filter by priority": "filter by priority",
     "filter condition": "filter condition",
+    "filter criteria are not saved": "filter criteria are not saved",
+    "filter name": "filter name",
     "folder is created successfully": "folder is created successfully",
     "follow": "follow",
     "four parameter references": "1. Input parameter reference for this scene: / $<< params.lab >>, and lab is input parameter name of the scene; 2. Output parameter reference for the front interface: / $<< outputs.10.status >>, and 10 is the interface ID, status is the output parameter name; 3. Mock parameter reference: / $<< random.string >>, and string is a function to randomly generate a string (includes integer, float, boolean, upper, lower, etc.); 4. Global environment variable reference: / $<< configs.autotest.cluster-name >>, and cluster-name is the environment variable name.",
@@ -1413,6 +1419,7 @@
     "new branch added successfully": "new branch added successfully",
     "new branch rule": "new branch rule",
     "new document": "new document",
+    "new filter": "new filter",
     "new iteration": "new iteration",
     "new merge request": "new merge request",
     "new node": "new node",
@@ -1546,6 +1553,7 @@
     "please enter the task name": "please enter the task name",
     "please enter title or ID": "please enter title or ID",
     "please enter valid repository address": "please enter valid repository address",
+    "please enter, within {num} characters": "please enter, within {num} characters",
     "please fill in the correct ip": "please fill in the correct ip",
     "please fill in the correct port number": "please fill in the correct port number",
     "please fill in the test plan name": "please fill in the test plan name",
@@ -1681,6 +1689,7 @@
     "serviceMesh": "serviceMesh",
     "set as default": "set as default",
     "set default branch successfully": "set default branch successfully",
+    "set it to open all": "set it to open all",
     "set the default merge request description template": "set the default merge request description template",
     "settings updated successfully": "settings updated successfully",
     "severity": "severity",
@@ -1859,6 +1868,7 @@
     "webhook": "webhook",
     "what did this MR do?": "what did this MR do?",
     "whether to delete the source branch": "whether to delete the source branch",
+    "whether to delete the {name}": "whether to delete the {name}",
     "whether to jump to the newly created document": "whether to jump to the newly created document",
     "whether to save and jump to the newly created document": "whether to save and jump to the newly created document",
     "whether {action} task {name}": "whether {action} task {name}",
