--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -675,6 +675,7 @@
     "change setting": "修改配置",
     "changes in the day": "天内变化",
     "changes in the hour": "小时内变化",
+    "clear": "清除",
     "clear selected": "清除已选",
     "click edit to complete the form": "点击编辑完善表单",
     "click to add item": "点击新增项",
@@ -712,6 +713,7 @@
     "expand branch directory selection document": "展开分支目录选择文档",
     "expand branch directory selection document or create a new document": "展开分支目录选择文档或新建文档",
     "file upload": "文件上传",
+    "filter": "筛选",
     "folder": "文件夹",
     "form": "表单",
     "form configuration": "表单配置信息",
@@ -1034,6 +1036,7 @@
     "change execution result": "变更执行结果",
     "change executor": "变更执行人",
     "change label": "更改标签",
+    "changed": "已变更",
     "changed file(s)": "个文件修改",
     "changed files": "变更",
     "checkrun-failure-tip": "本次 MR 中代码审查失败，详情请查看流水线",
@@ -1132,6 +1135,7 @@
     "custom addon config": "自定义服务配置",
     "custom config of issue type": "事项类型自定义配置",
     "custom fields": "自定义字段",
+    "custom filter": "自建筛选器",
     "cut": "剪切",
     "dashboard": "仪表盘",
     "data bank": "数据银行",
@@ -1261,6 +1265,8 @@
     "filter by data source name": "通过数据源名称过滤",
     "filter by priority": "使用优先级过滤",
     "filter condition": "过滤条件",
+    "filter criteria are not saved": "未保存筛选条件",
+    "filter name": "筛选器名称",
     "folder is created successfully": "创建文件夹成功",
     "follow": "关注",
     "four parameter references": "1. 本场景的入参引用方法：/ $<< params.lab >>，其中 lab 为场景入参名;2. 前置接口出参引用方法：/ $<< outputs.10.status >>，其中 10 为接口 ID，status 为出参名称;3. mock 参数引用方法：/ $<< random.string >>， 其中 string 为随机生成字符串的函数（还包含 integer、float、boolean、upper、lower等）;4. 全局环境变量的引用方法：/ $<< configs.autotest.cluster-name >>，其中 cluster-name 为环境变量名",
@@ -1413,6 +1419,7 @@
     "new branch added successfully": "新建分支成功",
     "new branch rule": "新增分支规则",
     "new document": "新建文档",
+    "new filter": "存为新筛选器",
     "new iteration": "新建迭代",
     "new merge request": "新建合并请求",
     "new node": "新建节点",
@@ -1546,6 +1553,7 @@
     "please enter the task name": "请输入任务名称",
     "please enter title or ID": "请输入标题或ID",
     "please enter valid repository address": "请输入正确的仓库地址",
+    "please enter, within {num} characters": "请填写，{num} 字以内",
     "please fill in the correct ip": "请填写正确ip",
     "please fill in the correct port number": "请填写正确的端口号",
     "please fill in the test plan name": "请填写测试计划名称",
@@ -1681,6 +1689,7 @@
     "serviceMesh": "服务网格",
     "set as default": "设为默认",
     "set default branch successfully": "设置默认分支成功",
+    "set it to open all": "置为 \"全部打开\"",
     "set the default merge request description template": "设置默认的合并请求描述模板",
     "settings updated successfully": "更新设置成功",
     "severity": "严重程度",
@@ -1859,6 +1868,7 @@
     "webhook": "webhook",
     "what did this MR do?": "这个 MR 做了什么",
     "whether to delete the source branch": "是否删除源分支",
+    "whether to delete the {name}": "是否删除 {name}",
     "whether to jump to the newly created document": "是否跳转至新建的文档",
     "whether to save and jump to the newly created document": "是否保存并跳转至新建的文档",
     "whether {action} task {name}": "是否{action}任务{name}",
