feat: issue kanban / list style refactor (#2309)
* feat: kanban refactor

* fix: delete useless

* fix: add radio-tabs in config page

* fix: fix tags-row cursor

* fix: fix top tab split

* fix: fix issue state icon

* fix: fix configurable filterSet type

* fix: fix filter

* fix: add skip render

* fix(common): configurable filter style optimization (#2306)

* fix(common): configurable filter bug (#2303)

* fix(common): configurable filter optimization (#2308)

* fix: delete useless

* fix: add iteration gantt path

* fix: delete useless

* fix: fix tabs in issue

* fix(common): configurable filter placeholder bug (#2310)

* fix: add license

Co-authored-by: hujiahao-hjh <82502479+hujiahao-hjh@users.noreply.github.com>

--- a/locales/en.json
+++ b/locales/en.json
@@ -602,6 +602,7 @@
     "network": "network",
     "new notification channel": "new notification channel",
     "new password": "new password",
+    "new {name}": "new {name}",
     "nickname": "nickname",
     "no available version": "no available version",
     "no description yet": "no description yet",
