--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -998,6 +998,7 @@
     "belongs to": "belongs to",
     "bigData app": "bigData app",
     "blocking": "blocking",
+    "board": "board",
     "branch": "branch",
     "branch comparison": "branch comparison",
     "branch deleted successfully": "branch deleted successfully",
@@ -1270,6 +1271,7 @@
     "folder is created successfully": "folder is created successfully",
     "follow": "follow",
     "four parameter references": "1. Input parameter reference for this scene: / $<< params.lab >>, and lab is input parameter name of the scene; 2. Output parameter reference for the front interface: / $<< outputs.10.status >>, and 10 is the interface ID, status is the output parameter name; 3. Mock parameter reference: / $<< random.string >>, and string is a function to randomly generate a string (includes integer, float, boolean, upper, lower, etc.); 4. Global environment variable reference: / $<< configs.autotest.cluster-name >>, and cluster-name is the environment variable name.",
+    "gantt chart": "gantt chart",
     "general ability": "general ability",
     "general settings": "general settings",
     "global environment variable": "global environment variable",
