--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -998,6 +998,7 @@
     "belongs to": "属于",
     "bigData app": "大数据应用",
     "blocking": "阻塞",
+    "board": "看板",
     "branch": "分支",
     "branch comparison": "分支对比",
     "branch deleted successfully": "删除分支成功",
@@ -1270,6 +1271,7 @@
     "folder is created successfully": "创建文件夹成功",
     "follow": "关注",
     "four parameter references": "1. 本场景的入参引用方法：/ $<< params.lab >>，其中 lab 为场景入参名;2. 前置接口出参引用方法：/ $<< outputs.10.status >>，其中 10 为接口 ID，status 为出参名称;3. mock 参数引用方法：/ $<< random.string >>， 其中 string 为随机生成字符串的函数（还包含 integer、float、boolean、upper、lower等）;4. 全局环境变量的引用方法：/ $<< configs.autotest.cluster-name >>，其中 cluster-name 为环境变量名",
+    "gantt chart": "甘特图",
     "general ability": "通用能力",
     "general settings": "通用设置",
     "global environment variable": "全局环境变量",
