--- a/locales/zh.json
+++ b/locales/zh.json
@@ -602,6 +602,7 @@
     "network": "网络",
     "new notification channel": "新建通知渠道",
     "new password": "新密码",
+    "new {name}": "新建{name}",
     "nickname": "昵称",
     "no available version": "暂无可用版本",
     "no description yet": "暂无描述",
