feat(msp): refactor service list & service overview

--- a/locales/en.json
+++ b/locales/en.json
@@ -744,6 +744,7 @@
     "reference API": "reference API",
     "refresh": "refresh",
     "refuse": "refuse",
+    "refresh data": "refresh data",
     "regexp": "regexp",
     "region": "region",
     "reject": "reject",
