--- a/locales/zh.json
+++ b/locales/zh.json
@@ -743,6 +743,7 @@
     "recover template": "恢复模板",
     "reference API": "引用 API",
     "refresh": "刷新",
+    "refresh data": "刷新数据",
     "refuse": "拒绝",
     "regexp": "正则表达式",
     "region": "区域",
