--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -1949,6 +1949,7 @@
     "Waterfall Plot": "Waterfall Plot",
     "Web transaction": "Web transaction",
     "a domain name can only contain numbers, lowercase letters, *, -": "a domain name can only contain numbers, lowercase letters, *, -",
+    "abnormal service": "abnormal service",
     "abnormal traffic interception": "abnormal traffic interception",
     "access configuration": "access configuration",
     "access domain": "access domain",
@@ -1971,6 +1972,7 @@
     "alarm history": "alarm history",
     "all": "all",
     "all methods": "all methods",
+    "all service": "all service",
     "allow access": "allow access",
     "anomaly check": "anomaly check",
     "api method path": "api method path",
@@ -2235,6 +2237,7 @@
     "input rule id separated by space": "input rule id separated by space",
     "interface": "interface",
     "interface description": "interface description",
+    "interface rps": "interface RPS",
     "internal network": "internal network",
     "internal network address": "internal network address",
     "inverse selection of all apis": "inverse selection of all apis",
@@ -2265,6 +2268,7 @@
     "match the URL path prefix, and remove the prefix": "match the URL path prefix, and remove the prefix",
     "max time-consuming(ms)": "max time-consuming(ms)",
     "maximum concurrency": "maximum concurrency",
+    "maximum delay": "maximum delay",
     "maximum extra delay": "maximum extra delay",
     "maximum number of connections": "maximum number of connections",
     "maximum number of queries": "maximum number of queries",
@@ -2294,6 +2298,7 @@
     "no service is connected currently, click the button below to access the service": "no service is connected currently, click the button below to access the service",
     "no service is connected currently, if you deploy an application on the DevOps platform, the service will be displayed automatically": "no service is connected currently, if you deploy an application on the DevOps platform, the service will be displayed automatically",
     "no stack": "no stack",
+    "no traffic service": "no traffic service",
     "node list": "node list",
     "node traffic management": "node traffic management",
     "normal": "normal",
@@ -2428,12 +2433,16 @@
     "server response": "server response",
     "service API prefix": "service API prefix",
     "service analysis": "service analysis",
+    "service instance": "service instance",
+    "service invocation analysis": "service invocation analysis",
     "service list": "service list",
     "service load protection": "service load protection",
     "service name": "service name",
     "service overview": "Overview",
     "service registration list": "service registration list",
+    "service request overview": "service request overview",
     "service routing prefix": "service routing prefix",
+    "service topology": "service topology",
     "set datum point": "set datum point",
     "set to benchmark log": "set to benchmark log",
     "shortest isolation time": "shortest isolation time",
