--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -1949,6 +1949,7 @@
     "Waterfall Plot": "瀑布图",
     "Web transaction": "Web事务",
     "a domain name can only contain numbers, lowercase letters, *, -": "域名只能包含数字、小写字母、*、-",
+    "abnormal service": "异常服务",
     "abnormal traffic interception": "异常流量拦截",
     "access configuration": "接入配置",
     "access domain": "访问域名",
@@ -1971,6 +1972,7 @@
     "alarm history": "告警历史",
     "all": "全部",
     "all methods": "全部方法",
+    "all service": "全部服务",
     "allow access": "允许访问",
     "anomaly check": "异常检查",
     "api method path": "API方法路径",
@@ -2235,6 +2237,7 @@
     "input rule id separated by space": "输入空格分隔的规则id",
     "interface": "接口",
     "interface description": "接口描述",
+    "interface rps": "接口 RPS",
     "internal network": "内部网络",
     "internal network address": "内网地址",
     "inverse selection of all apis": "反选全部API",
@@ -2265,12 +2268,13 @@
     "match the URL path prefix, and remove the prefix": "匹配到URL路径前缀，同时移除前缀",
     "max time-consuming(ms)": "最大耗时(ms)",
     "maximum concurrency": "最大并发",
+    "maximum delay": "最大延迟",
     "maximum extra delay": "最大额外延时",
     "maximum number of connections": "最大连接数",
     "maximum number of queries": "最大查询条数",
     "maximum number of retries": "最大重试次数",
     "maximum number of waiting requests": "最大等待请求数",
-    "maximum throughput": "最大吞吐",
+    "maximum throughput": "最大吞吐量",
     "maximum time consuming": "最大耗时",
     "maximum value": "最大值",
     "memory usage limit": "内存使用限制",
@@ -2294,6 +2298,7 @@
     "no service is connected currently, click the button below to access the service": "当前未接入任何服务，点击下方按钮即可接入服务",
     "no service is connected currently, if you deploy an application on the DevOps platform, the service will be displayed automatically": "当前未接入任何服务，在 DevOps 平台部署应用即可自动显示服务",
     "no stack": "暂无堆栈信息",
+    "no traffic service": "无流量服务",
     "node list": "节点列表",
     "node traffic management": "节点流量管理",
     "normal": "正常",
@@ -2428,12 +2433,16 @@
     "server response": "服务器响应",
     "service API prefix": "服务 API 前缀",
     "service analysis": "服务分析",
+    "service instance": "服务实例",
+    "service invocation analysis": "服务调用分析",
     "service list": "服务列表",
     "service load protection": "服务负载保护",
     "service name": "服务名",
     "service overview": "服务总览",
     "service registration list": "服务注册列表",
+    "service request overview": "服务请求概览",
     "service routing prefix": "服务路由前缀",
+    "service topology": "服务拓扑",
     "set datum point": "设置基准点",
     "set to benchmark log": "设置为基准日志",
     "shortest isolation time": "实例最短隔离时间",
