feat(msp): add empty holder for top-n
feat(msp): refactor service list & service overview

feat(msp): fix toppology params

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -1949,7 +1949,6 @@
     "Waterfall Plot": "Waterfall Plot",
     "Web transaction": "Web transaction",
     "a domain name can only contain numbers, lowercase letters, *, -": "a domain name can only contain numbers, lowercase letters, *, -",
-    "abnormal service": "abnormal service",
     "abnormal traffic interception": "abnormal traffic interception",
     "access configuration": "access configuration",
     "access domain": "access domain",
@@ -2110,9 +2109,11 @@
     "data collection desc": "only Java Agent supports exception analysis and JVM monitoring. Data collection methods such as Jaeger and Open Telemetry only support the analysis and display of call link tracking data.",
     "data distribution": "data distribution",
     "day": "day",
-    "definition of average delay": "average time taken by a service to process a request or task",
-    "definition of error rate": "percentage of all requests per unit of time that result in an error",
-    "definition of rps": "throughput, the number of requests per second that a service can handle",
+    "definition of average delay": "average response time of service requests in the last hour",
+    "definition of average rps": "average number of requests processed per second by the service in the last hour",
+    "definition of error rate": "ratio of the number of incorrect requests to the total number of requests in the last hour",
+    "definition of maximum delay": "maximum response time of a service request within the last hour",
+    "definition of maximum rps": "maximum number of requests processed per second by the service in the last hour",
     "delay analysis": "delay analysis",
     "delay ratio": "delay ratio",
     "delay time": "delay time",
@@ -2436,6 +2437,7 @@
     "service instance": "service instance",
     "service invocation analysis": "service invocation analysis",
     "service list": "service list",
+    "service monitor": "service monitor",
     "service load protection": "service load protection",
     "service name": "service name",
     "service overview": "Overview",
