--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -1949,7 +1949,6 @@
     "Waterfall Plot": "瀑布图",
     "Web transaction": "Web事务",
     "a domain name can only contain numbers, lowercase letters, *, -": "域名只能包含数字、小写字母、*、-",
-    "abnormal service": "异常服务",
     "abnormal traffic interception": "异常流量拦截",
     "access configuration": "接入配置",
     "access domain": "访问域名",
@@ -2110,9 +2109,11 @@
     "data collection desc": "仅 Java Agent 支持异常分析和 JVM 监控，Jaeger、Open Telemetry 等数据采集方式仅支持调用链路追踪数据的分析和展示",
     "data distribution": "数据分布",
     "day": "天",
-    "definition of average delay": "单位时间内服务处理请求或者任务的平均耗时",
-    "definition of error rate": "单位时间内所有请求中结果出错的请求所占比例",
-    "definition of rps": "即吞吐率，每秒钟服务可以处理的请求数",
+    "definition of average delay": "服务最近一小时内请求的平均响应时间",
+    "definition of average rps": "服务最近一小时内平均每秒处理的请求次数",
+    "definition of error rate": "服务最近一小时内错误请求次数占总请求次数的比例",
+    "definition of maximum delay": "服务最近一小时内请求的最大响应时间",
+    "definition of maximum rps": "服务最近一小时内每秒处理的最大请求次数",
     "delay analysis": "延时分析",
     "delay ratio": "延时比例",
     "delay time": "延时时间",
@@ -2436,6 +2437,7 @@
     "service instance": "服务实例",
     "service invocation analysis": "服务调用分析",
     "service list": "服务列表",
+    "service monitor": "服务监控",
     "service load protection": "服务负载保护",
     "service name": "服务名",
     "service overview": "服务总览",
