--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -1971,6 +1971,7 @@
     "alarm history": "alarm history",
     "all": "all",
     "all methods": "all methods",
+    "all service": "all service",
     "allow access": "allow access",
     "anomaly check": "anomaly check",
     "api method path": "api method path",
@@ -2108,9 +2109,11 @@
     "data collection desc": "only Java Agent supports exception analysis and JVM monitoring. Data collection methods such as Jaeger and Open Telemetry only support the analysis and display of call link tracking data.",
     "data distribution": "data distribution",
     "day": "day",
-    "definition of average delay": "average time taken by a service to process a request or task",
-    "definition of error rate": "percentage of all requests per unit of time that result in an error",
-    "definition of rps": "throughput, the number of requests per second that a service can handle",
+    "definition of average delay": "average response time of service requests in the last hour",
+    "definition of average rps": "average number of requests processed per second by the service in the last hour",
+    "definition of error rate": "ratio of the number of incorrect requests to the total number of requests in the last hour",
+    "definition of maximum delay": "maximum response time of a service request within the last hour",
+    "definition of maximum rps": "maximum number of requests processed per second by the service in the last hour",
     "delay analysis": "delay analysis",
     "delay ratio": "delay ratio",
     "delay time": "delay time",
@@ -2265,6 +2268,7 @@
     "match the URL path prefix, and remove the prefix": "match the URL path prefix, and remove the prefix",
     "max time-consuming(ms)": "max time-consuming(ms)",
     "maximum concurrency": "maximum concurrency",
+    "maximum delay": "maximum delay",
     "maximum extra delay": "maximum extra delay",
     "maximum number of connections": "maximum number of connections",
     "maximum number of queries": "maximum number of queries",
@@ -2294,6 +2298,7 @@
     "no service is connected currently, click the button below to access the service": "no service is connected currently, click the button below to access the service",
     "no service is connected currently, if you deploy an application on the DevOps platform, the service will be displayed automatically": "no service is connected currently, if you deploy an application on the DevOps platform, the service will be displayed automatically",
     "no stack": "no stack",
+    "no traffic service": "no traffic service",
     "node list": "node list",
     "node traffic management": "node traffic management",
     "normal": "normal",
@@ -2428,12 +2433,17 @@
     "server response": "server response",
     "service API prefix": "service API prefix",
     "service analysis": "service analysis",
+    "service instance": "service instance",
+    "service invocation analysis": "service invocation analysis",
     "service list": "service list",
+    "service monitor": "service monitor",
     "service load protection": "service load protection",
     "service name": "service name",
     "service overview": "Overview",
     "service registration list": "service registration list",
+    "service request overview": "service request overview",
     "service routing prefix": "service routing prefix",
+    "service topology": "service topology",
     "set datum point": "set datum point",
     "set to benchmark log": "set to benchmark log",
     "shortest isolation time": "shortest isolation time",
