--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -1971,6 +1971,7 @@
     "alarm history": "告警历史",
     "all": "全部",
     "all methods": "全部方法",
+    "all service": "全部服务",
     "allow access": "允许访问",
     "anomaly check": "异常检查",
     "api method path": "API方法路径",
@@ -2108,9 +2109,11 @@
     "data collection desc": "仅 Java Agent 支持异常分析和 JVM 监控，Jaeger、Open Telemetry 等数据采集方式仅支持调用链路追踪数据的分析和展示",
     "data distribution": "数据分布",
     "day": "天",
-    "definition of average delay": "单位时间内服务处理请求或者任务的平均耗时",
-    "definition of error rate": "单位时间内所有请求中结果出错的请求所占比例",
-    "definition of rps": "即吞吐率，每秒钟服务可以处理的请求数",
+    "definition of average delay": "服务最近一小时内请求的平均响应时间",
+    "definition of average rps": "服务最近一小时内平均每秒处理的请求次数",
+    "definition of error rate": "服务最近一小时内错误请求次数占总请求次数的比例",
+    "definition of maximum delay": "服务最近一小时内请求的最大响应时间",
+    "definition of maximum rps": "服务最近一小时内每秒处理的最大请求次数",
     "delay analysis": "延时分析",
     "delay ratio": "延时比例",
     "delay time": "延时时间",
@@ -2265,12 +2268,13 @@
     "match the URL path prefix, and remove the prefix": "匹配到URL路径前缀，同时移除前缀",
     "max time-consuming(ms)": "最大耗时(ms)",
     "maximum concurrency": "最大并发",
+    "maximum delay": "最大延迟",
     "maximum extra delay": "最大额外延时",
     "maximum number of connections": "最大连接数",
     "maximum number of queries": "最大查询条数",
     "maximum number of retries": "最大重试次数",
     "maximum number of waiting requests": "最大等待请求数",
-    "maximum throughput": "最大吞吐",
+    "maximum throughput": "最大吞吐量",
     "maximum time consuming": "最大耗时",
     "maximum value": "最大值",
     "memory usage limit": "内存使用限制",
@@ -2294,6 +2298,7 @@
     "no service is connected currently, click the button below to access the service": "当前未接入任何服务，点击下方按钮即可接入服务",
     "no service is connected currently, if you deploy an application on the DevOps platform, the service will be displayed automatically": "当前未接入任何服务，在 DevOps 平台部署应用即可自动显示服务",
     "no stack": "暂无堆栈信息",
+    "no traffic service": "无流量服务",
     "node list": "节点列表",
     "node traffic management": "节点流量管理",
     "normal": "正常",
@@ -2428,12 +2433,17 @@
     "server response": "服务器响应",
     "service API prefix": "服务 API 前缀",
     "service analysis": "服务分析",
+    "service instance": "服务实例",
+    "service invocation analysis": "服务调用分析",
     "service list": "服务列表",
+    "service monitor": "服务监控",
     "service load protection": "服务负载保护",
     "service name": "服务名",
     "service overview": "服务总览",
     "service registration list": "服务注册列表",
+    "service request overview": "服务请求概览",
     "service routing prefix": "服务路由前缀",
+    "service topology": "服务拓扑",
     "set datum point": "设置基准点",
     "set to benchmark log": "设置为基准日志",
     "shortest isolation time": "实例最短隔离时间",
