refactor: compplete i18n which lost

--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -1305,7 +1305,7 @@
     "included tasks": "包含的任务",
     "initiated": "我发起的",
     "input bug name": "输入缺陷名称",
-    "input custom boards name": "__NOT_TRANSLATED__",
+    "input custom boards name": "请输入自定义看板名",
     "input expected result": "输入预期结果",
     "input format error": "输入格式错误",
     "input interface name": "输入接口名称",
