--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -1,7 +1,6 @@
 {
   "backup": {
-    "parameter name": "参数名称",
-    "service": "服务概览"
+    "parameter name": "参数名称"
   },
   "charts": {
     "Apdex": "满意请求指数",
@@ -847,6 +846,7 @@
     "Must be composed of letters, numbers, underscores, hyphens and dots.": "必须由英文、数字、下划线、中划线、点组成",
     "Name already existed. Please rename it.": "名称已存在，请重新命名",
     "New version available. Upgrade now?": "版本可升级，是否升级",
+    "No workflow data": "暂无工作流数据",
     "Numeric value: Please fill in according to mathematical expression standards. It supports both open and closed intervals. For examples: [-20,20] is a set, <[-200,200],-1,2>.": "数值：请按照标准的数学表达式规范填写。示例如下： 区间支持开区间和闭区间、示例闭区间：[-20,20] 表示集合：<[-200,200],-1,2>。",
     "O & M": "应用运维",
     "Operator": "运维",
@@ -1181,13 +1181,10 @@
     "document is illegal": "文档不合法",
     "does not belong to": "不属于",
     "does not contain": "不包含",
-    "done": "已完成",
     "download failed file": "下载失败文件",
     "download tar.gz": "下载tar.gz",
     "download template": "下载模板",
     "download zip": "下载zip",
-    "due in {num} days": "{num}天后截止",
-    "due {num} days ago": "{num}天前截止",
     "duplicated": "重复提交",
     "duration": "持续时间",
     "easy": "容易",
@@ -1308,7 +1305,7 @@
     "included tasks": "包含的任务",
     "initiated": "我发起的",
     "input bug name": "输入缺陷名称",
-    "input custom board name": "请输入自定义看板名",
+    "input custom boards name": "请输入自定义看板名",
     "input expected result": "输入预期结果",
     "input format error": "输入格式错误",
     "input interface name": "输入接口名称",
@@ -1876,7 +1873,6 @@
     "whether {action} task {name}": "是否{action}任务{name}",
     "within {num} characters": "{num}个字符以内",
     "won't fix": "不修复",
-    "won't fix, duplicated": "不修复，重复提交",
     "workflow": "工作流",
     "workload": "工作量",
     "xmind-import-tip": "文件将以当前选中的测试集为根导入。",
@@ -2436,8 +2432,8 @@
     "service instance": "服务实例",
     "service invocation analysis": "服务调用分析",
     "service list": "服务列表",
-    "service monitor": "服务监控",
     "service load protection": "服务负载保护",
+    "service monitor": "服务监控",
     "service name": "服务名",
     "service overview": "服务总览",
     "service registration list": "服务注册列表",
