feat: add user profile component (#2289)
* feat: add user profile component

* feat: use tailwind class

--- a/locales/en.json
+++ b/locales/en.json
@@ -441,6 +441,7 @@
     "edit notification channel": "edit notification channel",
     "edit {name}": "edit {name}",
     "edited successfully": "edited successfully",
+    "email": "email",
     "enable": "enable",
     "enabled successfully": "enabled successfully",
     "enter key to save quickly": "enter key to save quickly",
