feat: complete position today in gantt

--- a/locales/en.json
+++ b/locales/en.json
@@ -155,6 +155,7 @@
     "This page has no data, whether to go": "This page has no data, whether to go",
     "Thu": "Thu",
     "Tickets": "Tickets",
+    "Today": "Today",
     "Tokyo": "Tokyo",
     "Tue": "Tue",
     "URL parameters": "URL parameters",
