--- a/locales/zh.json
+++ b/locales/zh.json
@@ -155,6 +155,7 @@
     "This page has no data, whether to go": "该页暂无数据，是否前往",
     "Thu": "四",
     "Tickets": "工单",
+    "Today": "今天",
     "Tokyo": "东京",
     "Tue": "二",
     "URL parameters": "URL参数",
