--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -1578,6 +1578,7 @@
     "plugin deployment": "plugin deployment",
     "port cannot be empty": "port cannot be empty",
     "ports": "ports",
+    "position to today": "position to today",
     "post comment": "post comment",
     "preconditions": "preconditions",
     "previous": "previous",
