--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -1578,6 +1578,7 @@
     "plugin deployment": "插件部署",
     "port cannot be empty": "端口不能为空",
     "ports": "端口",
+    "position to today": "定位至今天",
     "post comment": "发表评论",
     "preconditions": "前置条件",
     "previous": "上一步",
