--- a/locales/en.json
+++ b/locales/en.json
@@ -61,6 +61,9 @@
     "Fri": "Fri",
     "Germany": "Germany",
     "Go to page": "Go to page",
+    "Good afternoon": "Good afternoon",
+    "Good evening": "Good evening",
+    "Good morning": "Good morning",
     "Group": "Group",
     "Hangzhou": "Hangzhou",
     "Heyuan": "Heyuan",
@@ -165,6 +168,7 @@
     "Virginia": "Virginia",
     "Voice Template ID": "Voice Template ID",
     "Wed": "Wed",
+    "Welcome to use cloud native product - Erda": "Welcome to use cloud native product - Erda",
     "Welcome!": "Welcome!",
     "You can use ClientID and ClientSecret below to access API instance after approval.": "You can use ClientID and ClientSecret below to access API instance after approval.",
     "You do not have enough permissions": "You do not have enough permissions",
@@ -604,6 +608,7 @@
     "new {name}": "new {name}",
     "nickname": "nickname",
     "no available version": "no available version",
+    "no available {item}": "no available {item}",
     "no description yet": "no description yet",
     "no items selected": "no items selected",
     "no more data": "no more data",
@@ -984,6 +989,7 @@
     "{size} items / page": "{size} items / page",
     "{specific} instance": "{specific} instance",
     "{total} item added successfully": "{total} item added successfully",
-    "{unreadCount} messages unread": "{unreadCount} messages unread"
+    "{unreadCount} messages unread": "{unreadCount} messages unread",
+    "{week}": "{week}"
   }
 }
