feat(msp): add external interface statistics & prevent node overlap

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -2173,6 +2173,7 @@
     "exception type": "exception type",
     "expand all": "expand all",
     "expire date": "expire date",
+    "external interface": "external interface",
     "external network": "external network",
     "external network access": "external network access",
     "external network address": "external network address",
