--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -2173,6 +2173,7 @@
     "exception type": "异常类型",
     "expand all": "全部展开",
     "expire date": "过期时间",
+    "external interface": "外部接口",
     "external network": "外部网络",
     "external network access": "外网访问",
     "external network address": "外网地址",
