feat(dop): project release management

--- a/locales/en.json
+++ b/locales/en.json
@@ -641,6 +641,7 @@
     "ok": "ok",
     "on": "on",
     "one key all read": "one key all read",
+    "on key to empty": "on key to empty",
     "open": "open",
     "operate": "operate",
     "operated successfully": "operated successfully",
@@ -779,6 +780,7 @@
     "required": "required",
     "requirement": "requirement",
     "requirement & task": "requirement & task",
+    "return to previous page": "return to previous page",
     "reset": "reset",
     "reset Password": "reset Password",
     "reset account password": "reset account password",
