--- a/locales/zh.json
+++ b/locales/zh.json
@@ -641,6 +641,7 @@
     "ok": "确定",
     "on": "开",
     "one key all read": "一键已读",
+    "on key to empty": "一键清空",
     "open": "开启",
     "operate": "操作",
     "operated successfully": "操作成功",
@@ -779,6 +780,7 @@
     "required": "必需",
     "requirement": "需求",
     "requirement & task": "需求与任务",
+    "return to previous page": "返回上一页面",
     "reset": "重置",
     "reset Password": "重置密码",
     "reset account password": "重置账户密码",
