fix(dop): rename log advanced search

--- a/locales/en.json
+++ b/locales/en.json
@@ -539,6 +539,7 @@
     "joined projects": "joined projects",
     "jump server": "jump server",
     "key": "key",
+    "keywords": "keywords",
     "key only can be letters": "key only can be letters",
     "label": "label",
     "label tip": "label tip",
