--- a/locales/zh.json
+++ b/locales/zh.json
@@ -539,6 +539,7 @@
     "joined projects": "我的项目",
     "jump server": "跳板机",
     "key": "标示",
+    "keywords": "关键词",
     "key only can be letters": "key只能为英文",
     "label": "标签",
     "label tip": "标签提示",
