--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -780,6 +780,7 @@
     "start with letters, which can contain letters, numbers, dots, underscores and hyphens.": "start with letters, which can contain letters, numbers, dots, underscores and hyphens.",
     "startDate": "startDate",
     "state": "state",
+    "switch": "switch",
     "test case": "test case",
     "text": "text",
     "text edit": "text edit",
@@ -819,6 +820,8 @@
     "Date started": "Date started",
     "Deleting the output parameter will delete the corresponding parameter name assertion. Continue?": "delete the parameter will delete the corresponding parameter name assertion synchronously, confirm delete?",
     "Deleting will put the current test set and included test cases into the recycle bin.": "delete will cause the current test set and the included test cases to enter the recycle bin, ",
+    "Did not join any app, was invited to join or create app": "Did not join any app, was invited to join or create app",
+    "Did not join any project, was invited to join project or create project": "Did not join any project, was invited to join project or create project",
     "DingTalk notification address": "DingTalk notification address",
     "EstimateTime": "EstimateTime",
     "For artifact deployment environment, see Project Settings - Branch Rules.": "releaseId which can be deployed in the environment, please check: project settings - branch rules",
@@ -887,6 +890,7 @@
     "Time spent": "Time spent",
     "Time tracking": "Time tracking",
     "Today": "T",
+    "Tody is {time}": "Tody is {time}",
     "Up to 255 characters for directory name": "Up to 255 characters for directory name",
     "When enabled, application deployment needs to be reviewed and approved by the project administrator.": "When enabled, application deployment needs to be reviewed and approved by the project administrator.",
     "When you click directly, it will execute cases without environment.": "when you click directly, will execute cases without environment",
@@ -1407,6 +1411,7 @@
     "mr-tpl-unit-test": "Unit testing（Note:unit testing must be able to run locally, in any environment, please mock or evade dependencies）",
     "must start with a letter or number": "must start with a letter or number",
     "my approval": "my approval",
+    "my organization": "my organization",
     "mysql addon account switching, please restart to take effect": "mysql addon account switching, please restart to take effect",
     "name is required": "name is required",
     "network configuration": "network configuration",
@@ -1602,6 +1607,7 @@
     "protected branch": "protected branch",
     "protected-branch-form-tip": "after branch protection is turned on, only the application owner and application leader can operate, and other members can only submit code through mr",
     "public application": "public application",
+    "public organization": "public organization",
     "publish documents": "publish documents",
     "push config": "push config",
     "push to variable config": "push to variable config",
@@ -1689,6 +1695,8 @@
     "serviceMesh": "serviceMesh",
     "set as default": "set as default",
     "set default branch successfully": "set default branch successfully",
+    "set frequently used app as star app from the list below": "set frequently used app as star app from the list below",
+    "set frequently used project as star project from the list below": "set frequently used project as star project from the list below",
     "set it to open all": "set it to open all",
     "set the default merge request description template": "set the default merge request description template",
     "settings updated successfully": "settings updated successfully",
@@ -1709,6 +1717,8 @@
     "source type": "source type",
     "sprint": "sprint",
     "srm": "srm",
+    "star app": "star app",
+    "star project": "star project",
     "start analysis": "start analysis",
     "start command": "start command",
     "start cron": "start cron",
@@ -1747,6 +1757,7 @@
     "support positive and negative integers, 0, and character strings": "support positive and negative integers, 0, and character strings",
     "support string and regular matching": "support string and regular matching",
     "supports integers and decimals": "supports integers and decimals",
+    "switch organization": "switch organization",
     "system": "system",
     "system properties": "system properties",
     "target branch": "target branch",
