--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -780,6 +780,7 @@
     "start with letters, which can contain letters, numbers, dots, underscores and hyphens.": "字母开头,可包含字母、数字、.、_、-",
     "startDate": "开始日期",
     "state": "状态",
+    "switch": "切换",
     "test case": "用例",
     "text": "文本",
     "text edit": "文本编辑",
@@ -819,6 +820,8 @@
     "Date started": "开始时间",
     "Deleting the output parameter will delete the corresponding parameter name assertion. Continue?": "删除出参将同步删除对应参数名断言，确认删除？",
     "Deleting will put the current test set and included test cases into the recycle bin.": "删除会导致当前测试集及包含的测试用例将进入回收站，",
+    "Did not join any app, was invited to join or create app": "没有加入任何应用，被邀请加入或创建应用",
+    "Did not join any project, was invited to join project or create project": "没有加入任何项目，被邀请加入项目或创建项目",
     "DingTalk notification address": "钉钉通知地址",
     "EstimateTime": "预估时间",
     "For artifact deployment environment, see Project Settings - Branch Rules.": "制品可部署环境请查看：项目设置-分支规则",
@@ -887,6 +890,7 @@
     "Time spent": "所用时间",
     "Time tracking": "时间跟踪",
     "Today": "今",
+    "Tody is {time}": "今天是{time}",
     "Up to 255 characters for directory name": "目录名最大长度255",
     "When enabled, application deployment needs to be reviewed and approved by the project administrator.": "开启后，相关应用部署需要项目管理员审核同意后才能继续进行",
     "When you click directly, it will execute cases without environment.": "直接点击时，所选环境为无环境",
@@ -1407,6 +1411,7 @@
     "mr-tpl-unit-test": "单元测试 (注意：单元测试必须能够在本地、任意环境可以顺利跑过，请自行 mock 或则规避依赖）",
     "must start with a letter or number": "必须以字母或数字开头",
     "my approval": "我审批的",
+    "my organization": "我的组织",
     "mysql addon account switching, please restart to take effect": "mysql addon 账号切换中，请重启生效",
     "name is required": "名称不能为空",
     "network configuration": "网络配置",
@@ -1602,6 +1607,7 @@
     "protected branch": "分支保护",
     "protected-branch-form-tip": "分支保护开启后，只有应用所有者、应用研发主管才能操作，其他成员只能通过mr提交代码",
     "public application": "公开应用",
+    "public organization": "公开组织",
     "publish documents": "发布文档",
     "push config": "推送配置",
     "push to variable config": "推送到变量配置",
@@ -1689,6 +1695,8 @@
     "serviceMesh": "服务网格",
     "set as default": "设为默认",
     "set default branch successfully": "设置默认分支成功",
+    "set frequently used app as star app from the list below": "从下面的列表中将常用的应用程序设置为明星应用程序",
+    "set frequently used project as star project from the list below": "从下面的列表中将常用项目设置为明星项目",
     "set it to open all": "置为 \"全部打开\"",
     "set the default merge request description template": "设置默认的合并请求描述模板",
     "settings updated successfully": "更新设置成功",
@@ -1709,6 +1717,8 @@
     "source type": "源类型",
     "sprint": "迭代",
     "srm": "采供能力",
+    "star app": "星标应用",
+    "star project": "星标项目",
     "start analysis": "启动分析",
     "start command": "启动命令",
     "start cron": "开始定时",
@@ -1747,6 +1757,7 @@
     "support positive and negative integers, 0, and character strings": "支持正负整数、0、字符串。",
     "support string and regular matching": "支持字符串和正则匹配。",
     "supports integers and decimals": "支持整数，小数。",
+    "switch organization": "切换组织",
     "system": "系统",
     "system properties": "系统属性",
     "target branch": "目标分支",
